GtkStack: Survive loading an empty stack

The code in glade_gtk_stack_add_child was not robust enough
against disappearing placeholders.

https://bugzilla.gnome.org/show_bug.cgi?id=740668